Fixes to align to DSL

--- a/src/less/button/ds6/button-base.less
+++ b/src/less/button/ds6/button-base.less
@@ -8,6 +8,7 @@ button.btn,
 button.expand-btn,
 a.fake-btn,
 a.cta-btn {
+    -webkit-appearance: square-button;
     font-family: inherit;
     font-size: 16px;
     height: 40px;
@@ -49,6 +50,7 @@ a.cta-btn {
 button.btn--small,
 button.expand-btn--small,
 a.fake-btn--small {
+    font-size: 14px;
     height: 32px;
     line-height: 32px;
 }
@@ -70,8 +72,8 @@ a.fake-btn--primary {
 
     &:focus,
     &:hover {
-        background-color: @ds6-color-p004-blue;
-        border-color: @ds6-color-p004-blue;
+        background-color: @ds6-color-p003-blue;
+        border-color: @ds6-color-p003-blue;
     }
 
     &:active {
@@ -103,11 +105,13 @@ a.fake-btn--primary {
 }
 
 button.btn--secondary,
-button.expand-btn,
 a.fake-btn--secondary {
     background-color: white;
-    border: 1px solid @ds6-color-g204-gray;
+    border: 1px solid @ds6-color-p002-blue;
+    color: @ds6-color-p002-blue;
 
+    &:focus,
+    &:hover,
     &:active {
         border-color: @ds6-color-p003-blue;
         color: @ds6-color-p003-blue;
@@ -125,7 +129,12 @@ a.fake-btn--secondary {
 }
 
 button.expand-btn {
+    border-color: @ds6-color-g204-gray;
     color: @ds6-color-g206-gray;
+
+    &:active {
+        border-color: @ds6-color-g206-gray;
+    }
 
     &[aria-expanded="true"] {
         .expand-btn__icon {
